codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_note_view__tests__feedback_disclosure_four_rows.snap
---
source: tui/src/bottom_pane/feedback_note_view_tests.rs
expression: "format!(\"{initial}\\n\\n{scrolled}\")"
---
▌ Your data may be used to improve our models and products
▌
▌ A visible note.
Press enter to submit or esc to cancel

▌ sensitive personal information.
▌
▌ A visible note.
Press enter to submit or esc to cancel
