codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_note_view__tests__feedback_view_other.snap
---
source: tui/src/bottom_pane/feedback_note_view_tests.rs
expression: rendered
---
▌ Tell us more (other)
▌
▌ Your feedback can be used to improve ChatGPT. Learn more.
▌
▌ (optional) Write a short description to help us further

Press enter to submit or esc to cancel
